--- a/catangular/index.html
+++ b/catangular/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Catavolt SDK Example</title>
+    <script src="/js-sdk/out/catavolt_sdk.js"></script>
     <script src="lib/angular.min.js"></script>
+    <script src="lib/angular-route.min.js"></script>
     <script src="js/app.js"></script>
 </head>
 <body>
-    <div ng-controller="LoginController">
-        {{ text }}
-    </div>
+<div ng-view></div>
 </body>
 </html>
