--- a/catangular/index.html
+++ b/catangular/index.html
@@ -12,8 +12,11 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
     <script src="/js-sdk/out/catavolt_sdk.js"></script>
+    <script src="lib/pxloader-images.min.js"></script>
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-route.min.js"></script>
+    <script src="lib/angular-animate.min.js"></script>
+    <script src="lib/ngFxBundle.min.js"></script>
     <script src="js/app.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
