working toward 'performLaunchAction'

--- a/catangular/index.html
+++ b/catangular/index.html
@@ -11,7 +11,7 @@
     <title>Catavolt SDK Example</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
-    <script src="/js-sdk/out/catavolt_sdk.js"></script>
+    <script src="js/catavolt_sdk.js"></script>
     <script src="lib/pxloader-images.min.js"></script>
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-route.min.js"></script>
