--- a/catreact/index.html
+++ b/catreact/index.html
@@ -21,7 +21,10 @@
 
 </head>
 <body>
-    <div id="root"></div>
+
+
+    <div id="cvApp"></div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
