changed js files to tsx

--- a/catreact/index.html
+++ b/catreact/index.html
@@ -9,7 +9,8 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
-    <script src="js/catavolt_sdk.js"></script>
+    <script src="lib/react-with-addons.min.js"></script>
+    <script src="lib/react-dom.min.js"></script>
     <script src="lib/pxloader-images.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
